# github-actions-oidc-claims

./: Cargo.toml  README.md
src/: lib.rs
