[package]
name = "github-actions-oidc-claims"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
description = "Types for GitHub Actions JWT claims"
repository = "https://github.com/DeterminateSystems/github-actions-oidc-claims"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.171", features = ["derive"] }
